fix "go back" button alignment

--- a/downloads/downloads.css
+++ b/downloads/downloads.css
@@ -7,6 +7,7 @@ body {
   padding: 3ex;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 #navbar .left > img {
